first exercise was written.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="Button">Click</button>
     <script src="js/script.js"></script>
 </body>
 </html>
